--- a/quizmaster-frontend/src/index.css
+++ b/quizmaster-frontend/src/index.css
@@ -11,6 +11,10 @@ body {
   min-height: 100vh; 
 }
 
+* {
+  box-sizing: border-box;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
